--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.</p>
     </section>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Email</th>
+        </tr>
+        <tr>
+            <td>John Doe</td>
+            <td>JohnDoe@gmail.org</td>
+    </table>
     <form action="">
         <label for="name">Name</label>
         <input type="text" name="name" id="name" placeholder="Enter your name">
@@ -45,7 +54,7 @@
         <input type="date" name="date" id="date">
         <label for="time">Time</label>
         <input type="time" name="time" id="time"">
-        <button type="submit">Submit</button>
+        <button type=" submit">Submit</button>
     </form>
     <aside>
         <h3>Aside</h3>
@@ -57,6 +66,15 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.</p>
     </article>
+    <img src="img/johndoe.jpg" alt="">
+    <section>
+        <h2>Additional Content</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante
+            dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris.
+            Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent
+            taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in
+            libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at
+            dolor. Maecenas mattis.</p>
 </body>
 
 </html>
